3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

include/book.h: Increase the size of BOOK_BUF, so inscribed books can hold
  more informatin.
lib/Makefile.am, lib/Makefile.in: Add the 'rename' to the list of help
   files.
lib/archetypes: update the glyph/rune spells to have proper face.
lib/bmaps, lib/crossfire.* - add glyph.111 image.
server/gods.c: Modify tailor_god_spell() to look harder to find a god -
  necessary for glyph spells.
server/spell_attack.c: Give players 50% of exp for monsters they charm.
MSW 2004-05-19

common/object.c: Correct get_search_arr() to return a proper permutation.
Andreas Kirschbaum 2004-05-18

server/main.c: Have process_events display information from dumped object.
   also, more refinement on checking of object status.
MSW 2004-05-16

server/build_map.c: change 'player' variable to 'pl', since a player
    structure already exists. Also fix disappearing pedestals on non-unique
    maps (put'em over floor, they are visible but hey, can't have everything :p)
server/c_wiz.c: fix learn_spell.
Ryo 2004-05-16

server/main.c: freeing removed objects appeared to have more of a
  consequence than expected - only remove the object if it was on a map
  (op->map).  It turns out that the artifact code uses objects that
  are removed to store what the new object is.
server/spell_effect.c: Fix cast_create_food() to call 
    find_archetype_by_object_name() instead of find_archetype().  In this
    way, players can use invoke without having to know the archetype name.
server/c_wiz.c: Modify command_banish() to record dm name, player name,
   and date of command.
server/acinclude.m4: Patch by acinclude.m4 to add python 2.3 support.